--- a/pages/quemsomos.html
+++ b/pages/quemsomos.html
@@ -191,7 +191,10 @@
 
   <!-- ===================== Javascript ============================= -->
 
+  <script src="/js/cookie.js"></script>
   <script src="/js/menu.js"></script>
+  <script src="https://unpkg.com/scrollreveal"></script>
+  <script src="/js/configScroll.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
