--- a/pages/quemsomos.html
+++ b/pages/quemsomos.html
@@ -85,14 +85,7 @@
       <div class="section-3-QS-container">
         <div class="section-3-QS-textBox">
           <p class="section-3-QS-text">
-            Após estudos e análises do mercado no segmento de Transporte rodoviário de passageiros, constatamos que a
-            segurança e qualidade são os principais fatores, tornando-se exigências primordiais dos clientes que
-            utilizam tais serviços. Baseando-se nestes princípios a empresa NICKTHY FRETAMENTO E TURISMO LTDA- M.E foi
-            criada, para proporcionar aos nossos clientes o que é fundamental no ramo. SEGURANÇA E QUALIDADE. Dispomos
-            de estrutura veículos própios,veículos em parceria, representantes e agentes, direcionados para atuar em
-            toda area de transporte de passageiros. A NICKTHY FRETAMENTO E TURISMO LTDA- M.E acredita reunir condições
-            para atender as necessidades de sua empresa e a certeza de que formaremos muito mais que uma relação de
-            negócios, mas uma parceria de sucesso. <br><br>
+            Após estudos e análises do mercado no segmento de Transporte rodoviário de passageiros, constatamos que a segurança e qualidade são os principais fatores, tornando-se exigências primordiais dos clientes que utilizam tais serviços. Baseando-se nestes princípios a empresa NICKTHY FRETAMENTO E TURISMO LTDA.- M.E. foi criada, para proporcionar aos nossos clientes o que é fundamental no ramo. SEGURANÇA E QUALIDADE. Dispomos de estrutura veículos próprios, veículos em parceria, representantes e agentes, direcionados para atuar em toda área de transporte de passageiros. A NICKTHY FRETAMENTO E TURISMO LTDA.- M.E. acredita reunir condições para atender as necessidades de sua empresa e a certeza de que formaremos muito mais que uma relação de negócios, mas uma parceria de sucesso.<br><br>
             -Atenciosamente, Luiz Miralhes.
           </p>
         </div>
