--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -78,15 +78,12 @@
               Prestação de servicos de Transporte & logistica, com foco em Resultados
             </h2>
             <p>
+              Prestação de serviços de Transporte & logística, com foco em Resultados
               A NICKTHY FRETAMENTO E TURISMO atua em todo Estado do Rio de Janeiro com veículos utilitários e comuns de
-              médios e
-              pequenos portes. Trabalhamos com embarque e desenbarque nos principaias Portos : Macaé,Campos,Cabo Frio,
-              Porto do Açu e
-              Aeroportos : Galeão e Santos Dumont. Transfers e Translados em Condomínios. Disponibilizamos um veiculo
-              destinado
-              exclusivamente para sua necessidade , neste processo garantimos principalmente, tranqüilidade no que se
-              refere à segurança
-              dos passageiros.
+              médios e pequenos portes. Trabalhamos com embarque e desembarque nos principais Portos: Macaé, Campos,
+              Cabo Frio, Porto do Açu e Aeroportos: Galeão e Santos Dumont. Transfers e Translados em Condomínios.
+              Disponibilizamos um veículo destinado exclusivamente para sua necessidade, neste processo garantimos
+              principalmente, tranquilidade no que se refere à segurança dos passageiros.
             </p>
           </div>
         </div>
@@ -101,25 +98,20 @@
             <div class="blocosec3B">
               <h2> Estrutura Organizacional</h2>
               <p>
-                Possuímos uma estrutura com escritório equipado com todas
-                as ferramentas necessárias e toda a infraestrutura direcionada
-                ao transporte; Nossa estrutura é informatizada garantindo
-                assim a total precisão em tudo que a NICKTHY FRETAMENTO E
-                TURISMO negocia com seus clientes, garantindo qualidade em
-                seus serviços</p>
+                Possuímos uma estrutura com escritório equipado com todas as ferramentas necessárias e toda a
+                infraestrutura direcionada ao transporte; nossa estrutura é informatizada garantindo assim a total
+                precisão em tudo que a NICKTHY FRETAMENTO E TURISMO negocia com seus clientes, garantindo qualidade em
+                seus serviços.</p>
             </div>
           </div>
           <div class="blocosec3">
             <img src="/assets/image 12.svg" alt="Nossa frota img">
             <div class="blocosec3B">
               <h2>Nossa Frota</h2>
-              <p>Nossa frota incluindo parcerias possui veículos novos e
-                seminovos, monitorados via satélite com equipamentos : M7
-                Soluções Tecnologicas , SEGURO TOTAL e SEGURO de
-                Passageiros ( APP ) oferecendo a solução ideal e segurança
-                para nossos clientes . Veículos Utilitrios VANS , Doblô ,
-                Micro ônibus Veiculos de passeio: Simples ou Executivos , todos
-                equipados com ar condicionado e som ambiente.</p>
+              <p>Nossa frota, incluindo parcerias, possui veículos novos e seminovos, monitorados via satélite com
+                equipamentos: M7 Soluções Tecnológicas, SEGURO TOTAL e SEGURO de Passageiros (APP) oferecendo a solução
+                ideal e segurança para nossos clientes. Veículos Utilitários, VANS, Doblô, Micro-ônibus, Veículos de
+                passeio: simples ou executivos, todos equipados com ar condicionado e som ambiente.</p>
             </div>
           </div>
         </div>
@@ -133,13 +125,9 @@
             <img src="/assets/carbon_ibm-cloud-pak-security.svg" alt="icone escudo">
             <div class="bloco1sec4b">
               <h2>Segurança</h2>
-              <p>Segurança e Rapidez são palavras-chaves do
-                nosso negócio, o cliente que contrata nossos
-                serviços dispõe de agilidade e
-                principalmente, tranquilidade no que se
-                refere à Segurança. para isso, contamos com
-                a parceria da mais conceituada seguradora á
-                PORTO SEGUROS.</p>
+              <p>Segurança e Rapidez são palavras-chave do nosso negócio, o cliente que contrata nossos serviços dispõe
+                de agilidade e principalmente, tranquilidade no que se Refere à Segurança. Para isso, contamos com a
+                parceria da mais conceituada seguradora á PORTO SEGUROS.</p>
             </div>
           </div>
           <div class="blocosec4">
@@ -147,11 +135,8 @@
             <div class="bloco2sec4b">
               <h2>Qualidade</h2>
               <p>
-                Nosso dever é suprir todas as necessidades
-                de transporte de nossos clientes.
-                Transportar todos os nossos clientes com
-                Agilidade e Segurança. Garantir a total
-                satisfação de nossos clientes.</p>
+                Nosso dever é suprir todas as necessidades de transporte de nossos clientes. Transportar todos os nossos
+                clientes com Agilidade e Segurança. Garantir a total satisfação de nossos clientes.</p>
             </div>
           </div>
           <div class="blocosec4">
@@ -159,12 +144,8 @@
             <div class="bloco3sec4b">
               <h2>Sustentabilidade</h2>
               <p>
-                Nossos funcionários, nossos processos e
-                nossas tecnologias podem ajudar a
-                transformar as cidades em lugares mais
-                seguros, eficientes e agradáveis.
-                Nossos veículos possúem laudo de
-                opacidade.</p>
+                Nossos funcionários, nossos processos e nossas tecnologias podem ajudar a transformar as cidades em
+                lugares mais seguros, eficientes e agradáveis. Nossos veículos possuem laudo de opacidade.</p>
             </div>
           </div>
 
@@ -219,7 +200,8 @@
           <div id="icones-footer" class="col-sm">
             <a href="https://wa.me/5521964322624" target="_blank"><img src="/assets/icon-whats.svg" alt=""></a>
             <a href="mailto:contato@nkturismo.com.br" target="_blank"><img src="/assets/icon-email.svg" alt=""></a>
-            <a href="https://www.instagram.com/corporativo.turistico.eventos/" target="_blank"><img src="/assets/icon-insta.svg" alt=""></a>
+            <a href="https://www.instagram.com/corporativo.turistico.eventos/" target="_blank"><img
+                src="/assets/icon-insta.svg" alt=""></a>
             <a href="#" target="_blank"><img src="/assets/icon-face.svg" alt=""></a>
           </div>
         </div>
@@ -236,8 +218,10 @@
           </div>
           <div id="jaba-icons" class="col-sm">
             <a href="https://wa.me/5521983578774" target="_blank"><img src="/assets/jaba-whats.svg" alt=""></a>
-            <a href="https://github.com/PedroAndradeOriginal" target="_blank"><img src="/assets/jaba-github.svg" alt=""></a>
-            <a href="https://www.instagram.com/pedro_andrade_se/?hl=pt" target="_blank"><img src="/assets/jaba-insta.svg" alt=""></a>
+            <a href="https://github.com/PedroAndradeOriginal" target="_blank"><img src="/assets/jaba-github.svg"
+                alt=""></a>
+            <a href="https://www.instagram.com/pedro_andrade_se/?hl=pt" target="_blank"><img
+                src="/assets/jaba-insta.svg" alt=""></a>
           </div>
         </div>
       </div>
