--- a/index.html
+++ b/index.html
@@ -52,9 +52,12 @@
   </header>
 
   <!-- ===================== Carrossel e Banners ============================= -->
-
   <main>
-    <div id="carouselnk" class="carousel slide carousel-fade" data-ride="carousel">
+    <div defer style="padding:56.25% 0 0 0;position:relative;">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/ttnrFOsU0Uo" title="YouTube video player" frameborder="0" allow="autoplay; fullscreen; picture-in-picture accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
+    </div>
+
+    <!-- <div id="carouselnk" class="carousel slide carousel-fade" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item" data-interval="10000">
           <div class="containercar">
@@ -104,8 +107,8 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Próximo</span>
       </a>
-    </div>
-
+    </div> -->
+    
     <section>
       <div class="middleBanner">
         <div class="middleTxt">
@@ -212,19 +215,18 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
   <script src="/js/cookie.js"></script>
   <script src="/js/menu.js"></script>
+  <script src="js/player.js"></script>
   <script src="https://unpkg.com/scrollreveal"></script>
   <script src="/js/configScroll.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
+  integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+  crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-    crossorigin="anonymous"></script>
+  integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+  crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-    crossorigin="anonymous"></script>
-
-
+  integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+  crossorigin="anonymous"></script>
 </body>
 
 </html>
