--- a/index.html
+++ b/index.html
@@ -54,57 +54,10 @@
   <!-- ===================== Carrossel e Banners ============================= -->
 
   <main>
-    <div id="carouselnk" class="carousel slide carousel-fade" data-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item" data-interval="10000">
-          <div class="containercar">
-            <div class="imagemcar">
-              <img class="d-block w-100" src="assets/Home/van 01 3.png" alt="Slide um">
-            </div>
-            <div class="bloco">
-              <p>Conforto e Segurança</p>
-              <a href="/pages/quemsomos.html"><button type="submit" class="btn btn-warning" role="button">
-                  <p>Conheça mais</p>
-                </button></a>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item" data-interval="10000">
-          <div class="containercar">
-            <div class="imagemcar">
-              <img class="d-block w-100" src="assets/Home/van 01 3.png" alt="Slide dois">
-            </div>
-            <div class="bloco">
-              <p>Viaje conosco</p>
-              <a href="/pages/servicos.html"><button type="submit" class="btn btn-warning" role="button">
-                  <p>Serviços</p>
-                </button></a>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item active" data-interval="10000">
-          <div class="containercar">
-            <div class="imagemcar">
-              <img class="d-block w-100" src="assets/Home/van 01 3.png" alt="Slide três">
-            </div>
-            <div class="bloco">
-              <p>Seja muito Bem Vindo</p>
-              <a href="/pages/contato.html"><button type="submit" class="btn btn-warning" role="button">
-                  <p>Contate-nos</p>
-                </button></a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#carouselnk" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Anterior</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselnk" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Próximo</span>
-      </a>
+    <div class="videoNK">
+      <video width="100%" height="425px"  class ="videonk" src="assets/videos/projetoVideoNK.mp4" autoplay loop muted poster="assets/videos/posterVideo.png"></video>
     </div>
+
 
     <section>
       <div class="middleBanner">
